--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,6 +1,3 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
-
 name: .NET
 
 on:
@@ -11,7 +8,6 @@ on:
 
 jobs:
   build:
-    
     runs-on: windows-latest
     defaults:
       run:
@@ -28,8 +24,8 @@ jobs:
       shell: powershell
       run: |
         $client = New-Object System.Net.WebClient
-        $client.DownloadFile("https://download.microsoft.com/download/5/2/D/52DBE697-2D2C-45A3-A1D7-E79F30C9ECE7/ENU/SSDT-Setup-ENU.exe", "SSDT-Setup-ENU.exe")
-        Start-Process -FilePath "SSDT-Setup-ENU.exe" -ArgumentList "/install", "/quiet", "/norestart" -Wait
+        $client.DownloadFile("https://aka.ms/vs/16/release/DataStorage2019.exe", "DataStorage2019.exe")
+        Start-Process -FilePath "DataStorage2019.exe" -ArgumentList "/install", "/quiet", "/norestart" -Wait
     - name: Build
       run: dotnet build --no-restore 
     - name: Test
