Initialize Jwt Authentication

--- a/trailblazers-api/trailblazers-api/appsettings.json
+++ b/trailblazers-api/trailblazers-api/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Issuer": "https://localhost:8000",
+    "Audience": "https://localhost:8000",
+    "Key": "pUWxWqFvzMdLJ22xap2I",
+    "ExpirationMinutes": 1440
+  }
 }
