Commit merge staged

--- a/trailblazers-api/trailblazers-api/appsettings.Development.json
+++ b/trailblazers-api/trailblazers-api/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "SqlConnection": "Data Source=AZALITHEN;Initial Catalog=trailblazers-db;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
+
