--- a/trailblazers-api/trailblazers-api/trailblazers-api.csproj
+++ b/trailblazers-api/trailblazers-api/trailblazers-api.csproj
@@ -16,7 +16,8 @@
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.0" />  
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.0" />
+	<PackageReference Include="BCrypt.Net-Next" Version="4.0.2" />
 </ItemGroup>
 
 </Project>
