--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: trailblazers-react
+        working-directory: /trailblazers-react
     strategy:
       matrix:
         node-version: [14.x, 16.x, 18.x]
