--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Node.js CI
 
 on:
@@ -31,4 +28,4 @@ jobs:
         cache-dependency-path: 'trailblazers-react/package-lock.json'
     - run: npm ci
     - run: npm run build --if-present
-    - run: npm test
+    - run: npm test -- --passWithNoTests
