Update api project

--- a/trailblazers-api/trailblazers-api/trailblazers-api.csproj
+++ b/trailblazers-api/trailblazers-api/trailblazers-api.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>trailblazers_api</RootNamespace>
     <UserSecretsId>171f2fd9-ce6e-4ddf-8e26-2b8dd08581ce</UserSecretsId>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
     <DockerfileContext>.</DockerfileContext>
   </PropertyGroup>
 
