--- a/trailblazers-api/trailblazers-api/appsettings.Development.json
+++ b/trailblazers-api/trailblazers-api/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "SqlConnection": "Data Source=AZALITHEN;Initial Catalog=trailblazers-db;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "SqlConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=trailblazerDB;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
 
