Add docker files and  docker compose

--- a/trailblazers-api/trailblazers-api/appsettings.json
+++ b/trailblazers-api/trailblazers-api/appsettings.json
@@ -11,5 +11,9 @@
     "Audience": "https://localhost:8000",
     "Key": "pUWxWqFvzMdLJ22xap2I",
     "ExpirationMinutes": 1440
+  },
+  "ConnectionStrings": {
+    "SqlServer": "Server=trailblazers-db;Database=trailblazers-db;Integrated Security=False;User ID=SA;Password=m@rkeuSSS10;MultipleActiveResultSets=True;TrustServerCertificate=True"
   }
+
 }
