--- a/trailblazers-api/trailblazers-db/Dockerfile
+++ b/trailblazers-api/trailblazers-db/Dockerfile
@@ -2,6 +2,6 @@ FROM mcr.microsoft.com/mssql/server:2022-latest
 
 ENV ACCEPT_EULA=Y 
 
-ENV SA_PASSWORD="1234567890" 
+ENV SA_PASSWORD="m@rkeuSSS10" 
 
 EXPOSE 1433
