--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,9 @@
 version: "3.8"
+
 services:
   sqlserver:
     build: ./trailblazers-api/trailblazers-db
-    image: sql-server
+    image: sql-server-1
     container_name: trailblazers-db
     ports:
       - 1433:1433
@@ -21,19 +22,29 @@ services:
       - trailblazers-network
 
   frontend:
-      build: ./trailblazers-react/
-      container_name: trailblazers-frontend
-      volumes: 
-        - ./trailblazers-react/src:/app/src 
-      ports:
-        - 3000:3000
-      restart: "no"
-      stdin_open: true 
-      tty: true
-      depends_on:
-        - backend
-      networks:
-        - trailblazers-network
+    build: ./trailblazers-react/
+    container_name: trailblazers-frontend
+    volumes: 
+      - ./trailblazers-react/src:/app/src 
+    restart: "no"
+    stdin_open: true 
+    tty: true
+    depends_on:
+      - backend
+    networks:
+      - trailblazers-network
+
+  nginx:
+    image: nginx
+    container_name: trailblazers-nginx
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - 80:80
+    depends_on:
+      - frontend
+    networks:
+      - trailblazers-network
 
 networks:
   trailblazers-network:
